[project]
name = "traytimer"
version = "0.1.0"
description = "Linux system tray countdown timer (ported from Windows taskbartimer)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow>=12.1.1",
    "pystray>=0.19.5",
]

[project.optional-dependencies]
screenshot = ["mss>=9.0"]
